# vi_2p

./: CMakeLists.txt  package.xml  readme.md  requirements.txt
config/: vi_params.yaml
csv/q0_dt0p01_T40_a0p4_b0p04/pybullet/: avg_runtime.txt  energy_history.csv  momentum_history.csv  qdot_history.csv
csv/q0p2_dt0p01_T40_a0p4_b0p04/: energy_error_summary_vs_c_a.csv
csv/q0p2_dt0p01_T40_a0p4_b0p04/atsvi_ad/: avg_runtime.txt  delta_energy_history.csv  ee_history.csv  energy_history.csv  h_history.csv  momentum_history.csv  q_history.csv  time_history.csv
csv/q0p2_dt0p01_T40_a0p4_b0p04/ctsvi_ad/: avg_runtime.txt  delta_energy_history.csv  ee_history.csv  energy_T_history.csv  energy_U_history.csv  energy_history.csv  momentum_history.csv  q_history.csv
csv/q0p2_dt0p01_T40_a0p4_b0p04/etsvi/: avg_runtime.txt  delta_energy_history.csv  ee_history.csv  energy_history.csv  h_history.csv  momentum_history.csv  q_history.csv  time_history.csv
csv/q0p2_dt0p01_T40_a0p4_b0p04/pybullet/: avg_runtime.txt  delta_energy_history.csv  ee_history.csv  energy_history.csv  q_history.csv  qdot_history.csv
csv/q0p2_dt0p01_T40_a0p4_b0p04/rk4/: avg_runtime.txt  avg_runtime_pin.txt  delta_energy_history.csv  ee_history.csv  energy_history.csv  momentum_history.csv  q_history.csv  v_history.csv
csv/q1p57_0_dt0p01_T40_a0p4_b0/: energy_error_summary_vs_c_a.csv
csv/q1p57_0_dt0p01_T40_a0p4_b0/atsvi_ad/: avg_runtime.txt  delta_energy_history.csv  h_history.csv  q_history.csv
csv/q1p57_0_dt0p01_T40_a0p4_b0/ctsvi_ad/: avg_runtime.txt  ee_history.csv  energy_history.csv  q_history.csv  time_history.csv
csv/q1p57_0_dt0p01_T40_a0p4_b0/etsvi/: avg_runtime.txt  delta_energy_history.csv  ee_history.csv  energy_history.csv  h_history.csv  momentum_history.csv  q_history.csv  time_history.csv
csv/q1p57_0_dt0p01_T40_a0p4_b0p04/: energy_error_summary_vs_c_a.csv
csv/q1p57_0_dt0p01_T40_a0p4_b0p04/atsvi_ad/: avg_runtime.txt  ee_history.csv  energy_history.csv  momentum_history.csv  time_history.csv
csv/q1p57_0_dt0p01_T40_a0p4_b0p04/ctsvi_ad/: avg_runtime.txt  delta_energy_history.csv  energy_T_history.csv  energy_U_history.csv  momentum_history.csv
csv/q1p57_0_dt0p01_T40_a0p4_b0p04/etsvi/: avg_runtime.txt  delta_energy_history.csv  ee_history.csv  energy_history.csv  h_history.csv  momentum_history.csv  q_history.csv  time_history.csv
scripts/: etsvi_sweep_heatmap.py  plot_pendulum.py  pybullet_sim.py  render_pendulum.py  rk4_vi_compare_sim.py  run_param_sweep.py  vi_compare_sim.py
src/: atsvi_ad_node.cpp  ctsvi_ad_node.cpp  etsvi_node.cpp  rk4_node.cpp
urdf/: 2_pendulum.urdf
(+14 files in other folders)
