<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vi_2p</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hyang@buaa.edu.cn">space</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <depend>rclcpp</depend>
  <depend>cppad</depend>
  <depend>coal</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pybullet</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

